// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should defaultNpmScriptsOrder 1`] = `
{
  "analyze": "echo analyze",
  "build": "echo build",
  "ci": "echo ci",
  "coverage": "echo coverage",
  "dependencies": "echo dependencies",
  "dev": "echo dev",
  "install": "echo install",
  "lerna": "echo lerna",
  "link": "echo link",
  "lint": "echo lint",
  "major": "echo major",
  "minor": "echo minor",
  "npm": "echo npm",
  "pack": "echo pack",
  "patch": "echo patch",
  "postinstallOnly": "echo postinstallOnly",
  "postpack": "echo postpack",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "postuninstallOnly": "echo postuninstallOnly",
  "preinstallOnly": "echo preinstallOnly",
  "prepack": "echo prepack",
  "prepare": "echo prepare",
  "prepareOnly": "echo prepareOnly",
  "prepublish": "echo prepublish",
  "prepublishOnly": "echo prepublishOnly",
  "prerelease": "echo prerelease",
  "preuninstallOnly": "echo preuninstallOnly",
  "publish": "echo publish",
  "restart": "echo restart",
  "review": "echo review",
  "serve": "echo serve",
  "shrinkwrap": "echo shrinkwrap",
  "start": "echo start",
  "stop": "echo stop",
  "storybook": "echo storybook",
  "test": "echo test",
  "uninstall": "echo uninstall",
  "version": "echo version",
  "ws": "echo ws",
  "yarn": "echo yarn",
}
`;

exports[`should defaultNpmScriptsOrder 2`] = `
[
  "serve",
  "start",
  "dev",
  "restart",
  "stop",
  "review",
  "coverage",
  "lint",
  "test",
  "preinstallOnly",
  "install",
  "postinstallOnly",
  "preuninstallOnly",
  "uninstall",
  "postuninstallOnly",
  "build",
  "storybook",
  "analyze",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "ws",
  "version",
  "major",
  "minor",
  "patch",
  "prerelease",
  "prepareOnly",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
  "dependencies",
]
`;

exports[`should defaultNpmScriptsOrder 3`] = `
"{
  "serve": "echo serve",
  "start": "echo start",
  "dev": "echo dev",
  "restart": "echo restart",
  "stop": "echo stop",
  "review": "echo review",
  "coverage": "echo coverage",
  "lint": "echo lint",
  "test": "echo test",
  "preinstallOnly": "echo preinstallOnly",
  "install": "echo install",
  "postinstallOnly": "echo postinstallOnly",
  "preuninstallOnly": "echo preuninstallOnly",
  "uninstall": "echo uninstall",
  "postuninstallOnly": "echo postuninstallOnly",
  "build": "echo build",
  "storybook": "echo storybook",
  "analyze": "echo analyze",
  "link": "echo link",
  "ci": "echo ci",
  "npm": "echo npm",
  "yarn": "echo yarn",
  "lerna": "echo lerna",
  "ws": "echo ws",
  "version": "echo version",
  "major": "echo major",
  "minor": "echo minor",
  "patch": "echo patch",
  "prerelease": "echo prerelease",
  "prepareOnly": "echo prepareOnly",
  "prepublish": "echo prepublish",
  "prepare": "echo prepare",
  "prepublishOnly": "echo prepublishOnly",
  "prepack": "echo prepack",
  "pack": "echo pack",
  "postpack": "echo postpack",
  "publish": "echo publish",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "shrinkwrap": "echo shrinkwrap",
  "dependencies": "echo dependencies"
}"
`;

exports[`should defaultNpmScriptsOrder 4`] = `
{
  "analyze": "17",
  "build": "15",
  "ci": "19",
  "coverage": "6",
  "dependencies": "40",
  "dev": "2",
  "install": "10",
  "lerna": "22",
  "link": "18",
  "lint": "7",
  "major": "25",
  "minor": "26",
  "npm": "20",
  "pack": "34",
  "patch": "27",
  "postinstallOnly": "11",
  "postpack": "35",
  "postpublish": "37",
  "postpublishOnly": "38",
  "postuninstallOnly": "14",
  "preinstallOnly": "9",
  "prepack": "33",
  "prepare": "31",
  "prepareOnly": "29",
  "prepublish": "30",
  "prepublishOnly": "32",
  "prerelease": "28",
  "preuninstallOnly": "12",
  "publish": "36",
  "restart": "3",
  "review": "5",
  "serve": "0",
  "shrinkwrap": "39",
  "start": "1",
  "stop": "4",
  "storybook": "16",
  "test": "8",
  "uninstall": "13",
  "version": "24",
  "ws": "23",
  "yarn": "21",
}
`;

exports[`should defaultNpmScriptsOrder 5`] = `
[
  "serve",
  "start",
  "dev",
  "restart",
  "stop",
  "review",
  "coverage",
  "lint",
  "test",
  "preinstallOnly",
  "install",
  "postinstallOnly",
  "preuninstallOnly",
  "uninstall",
  "postuninstallOnly",
  "build",
  "storybook",
  "analyze",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "ws",
  "version",
  "major",
  "minor",
  "patch",
  "prerelease",
  "prepareOnly",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
  "dependencies",
]
`;

exports[`should defaultNpmScriptsOrder 6`] = `
"{
  "serve": "0",
  "start": "1",
  "dev": "2",
  "restart": "3",
  "stop": "4",
  "review": "5",
  "coverage": "6",
  "lint": "7",
  "test": "8",
  "preinstallOnly": "9",
  "install": "10",
  "postinstallOnly": "11",
  "preuninstallOnly": "12",
  "uninstall": "13",
  "postuninstallOnly": "14",
  "build": "15",
  "storybook": "16",
  "analyze": "17",
  "link": "18",
  "ci": "19",
  "npm": "20",
  "yarn": "21",
  "lerna": "22",
  "ws": "23",
  "version": "24",
  "major": "25",
  "minor": "26",
  "patch": "27",
  "prerelease": "28",
  "prepareOnly": "29",
  "prepublish": "30",
  "prepare": "31",
  "prepublishOnly": "32",
  "prepack": "33",
  "pack": "34",
  "postpack": "35",
  "publish": "36",
  "postpublish": "37",
  "postpublishOnly": "38",
  "shrinkwrap": "39",
  "dependencies": "40"
}"
`;

exports[`should defaultNpmScriptsOrder v2 1`] = `
{
  "analyze": "echo analyze",
  "build": "echo build",
  "ci": "echo ci",
  "coverage": "echo coverage",
  "dependencies": "echo dependencies",
  "dev": "echo dev",
  "install": "echo install",
  "lerna": "echo lerna",
  "link": "echo link",
  "lint": "echo lint",
  "major": "echo major",
  "minor": "echo minor",
  "npm": "echo npm",
  "pack": "echo pack",
  "patch": "echo patch",
  "postanalyze": "echo postanalyze",
  "postbuild": "echo postbuild",
  "postci": "echo postci",
  "postcoverage": "echo postcoverage",
  "postdependencies": "echo postdependencies",
  "postdev": "echo postdev",
  "postinstall": "echo postinstall",
  "postinstallOnly": "echo postinstallOnly",
  "postlerna": "echo postlerna",
  "postlink": "echo postlink",
  "postlint": "echo postlint",
  "postmajor": "echo postmajor",
  "postminor": "echo postminor",
  "postnpm": "echo postnpm",
  "postpack": "echo postpack",
  "postpatch": "echo postpatch",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "postprepack": "echo postprepack",
  "postprepare": "echo postprepare",
  "postprepareOnly": "echo postprepareOnly",
  "postprepublish": "echo postprepublish",
  "postprepublishOnly": "echo postprepublishOnly",
  "postprerelease": "echo postprerelease",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "postrestart": "echo postrestart",
  "postreview": "echo postreview",
  "postserve": "echo postserve",
  "postshrinkwrap": "echo postshrinkwrap",
  "poststart": "echo poststart",
  "poststop": "echo poststop",
  "poststorybook": "echo poststorybook",
  "posttest": "echo posttest",
  "postuninstall": "echo postuninstall",
  "postuninstallOnly": "echo postuninstallOnly",
  "postversion": "echo postversion",
  "postws": "echo postws",
  "postyarn": "echo postyarn",
  "preanalyze": "echo preanalyze",
  "prebuild": "echo prebuild",
  "preci": "echo preci",
  "precoverage": "echo precoverage",
  "predependencies": "echo predependencies",
  "predev": "echo predev",
  "preinstall": "echo preinstall",
  "preinstallOnly": "echo preinstallOnly",
  "prelerna": "echo prelerna",
  "prelink": "echo prelink",
  "prelint": "echo prelint",
  "premajor": "echo premajor",
  "preminor": "echo preminor",
  "prenpm": "echo prenpm",
  "prepack": "echo prepack",
  "prepare": "echo prepare",
  "prepareOnly": "echo prepareOnly",
  "prepatch": "echo prepatch",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "prepostpack": "echo prepostpack",
  "prepostpublish": "echo prepostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "prepublish": "echo prepublish",
  "prepublishOnly": "echo prepublishOnly",
  "prerelease": "echo prerelease",
  "prerestart": "echo prerestart",
  "prereview": "echo prereview",
  "preserve": "echo preserve",
  "preshrinkwrap": "echo preshrinkwrap",
  "prestart": "echo prestart",
  "prestop": "echo prestop",
  "prestorybook": "echo prestorybook",
  "pretest": "echo pretest",
  "preuninstall": "echo preuninstall",
  "preuninstallOnly": "echo preuninstallOnly",
  "preversion": "echo preversion",
  "prews": "echo prews",
  "preyarn": "echo preyarn",
  "publish": "echo publish",
  "restart": "echo restart",
  "review": "echo review",
  "serve": "echo serve",
  "shrinkwrap": "echo shrinkwrap",
  "start": "echo start",
  "stop": "echo stop",
  "storybook": "echo storybook",
  "test": "echo test",
  "uninstall": "echo uninstall",
  "version": "echo version",
  "ws": "echo ws",
  "yarn": "echo yarn",
}
`;

exports[`should defaultNpmScriptsOrder v2 2`] = `
[
  "preserve",
  "serve",
  "postserve",
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "prereview",
  "review",
  "postreview",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstallOnly",
  "postpreinstallOnly",
  "preinstall",
  "install",
  "postinstall",
  "prepostinstallOnly",
  "postinstallOnly",
  "preuninstallOnly",
  "postpreuninstallOnly",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prepostuninstallOnly",
  "postuninstallOnly",
  "prebuild",
  "build",
  "postbuild",
  "prestorybook",
  "storybook",
  "poststorybook",
  "preanalyze",
  "analyze",
  "postanalyze",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "prews",
  "ws",
  "postws",
  "preversion",
  "version",
  "postversion",
  "premajor",
  "major",
  "postmajor",
  "preminor",
  "minor",
  "postminor",
  "prepatch",
  "patch",
  "postpatch",
  "prerelease",
  "postprerelease",
  "prepareOnly",
  "postprepareOnly",
  "prepublish",
  "postprepublish",
  "prepare",
  "postprepare",
  "prepublishOnly",
  "postprepublishOnly",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "predependencies",
  "dependencies",
  "postdependencies",
]
`;

exports[`should defaultNpmScriptsOrder v2 3`] = `
"{
  "preserve": "echo preserve",
  "serve": "echo serve",
  "postserve": "echo postserve",
  "prestart": "echo prestart",
  "start": "echo start",
  "poststart": "echo poststart",
  "predev": "echo predev",
  "dev": "echo dev",
  "postdev": "echo postdev",
  "prerestart": "echo prerestart",
  "restart": "echo restart",
  "postrestart": "echo postrestart",
  "prestop": "echo prestop",
  "stop": "echo stop",
  "poststop": "echo poststop",
  "prereview": "echo prereview",
  "review": "echo review",
  "postreview": "echo postreview",
  "precoverage": "echo precoverage",
  "coverage": "echo coverage",
  "postcoverage": "echo postcoverage",
  "prelint": "echo prelint",
  "lint": "echo lint",
  "postlint": "echo postlint",
  "pretest": "echo pretest",
  "test": "echo test",
  "posttest": "echo posttest",
  "preinstallOnly": "echo preinstallOnly",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "preinstall": "echo preinstall",
  "install": "echo install",
  "postinstall": "echo postinstall",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "postinstallOnly": "echo postinstallOnly",
  "preuninstallOnly": "echo preuninstallOnly",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "preuninstall": "echo preuninstall",
  "uninstall": "echo uninstall",
  "postuninstall": "echo postuninstall",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "postuninstallOnly": "echo postuninstallOnly",
  "prebuild": "echo prebuild",
  "build": "echo build",
  "postbuild": "echo postbuild",
  "prestorybook": "echo prestorybook",
  "storybook": "echo storybook",
  "poststorybook": "echo poststorybook",
  "preanalyze": "echo preanalyze",
  "analyze": "echo analyze",
  "postanalyze": "echo postanalyze",
  "prelink": "echo prelink",
  "link": "echo link",
  "postlink": "echo postlink",
  "preci": "echo preci",
  "ci": "echo ci",
  "postci": "echo postci",
  "prenpm": "echo prenpm",
  "npm": "echo npm",
  "postnpm": "echo postnpm",
  "preyarn": "echo preyarn",
  "yarn": "echo yarn",
  "postyarn": "echo postyarn",
  "prelerna": "echo prelerna",
  "lerna": "echo lerna",
  "postlerna": "echo postlerna",
  "prews": "echo prews",
  "ws": "echo ws",
  "postws": "echo postws",
  "preversion": "echo preversion",
  "version": "echo version",
  "postversion": "echo postversion",
  "premajor": "echo premajor",
  "major": "echo major",
  "postmajor": "echo postmajor",
  "preminor": "echo preminor",
  "minor": "echo minor",
  "postminor": "echo postminor",
  "prepatch": "echo prepatch",
  "patch": "echo patch",
  "postpatch": "echo postpatch",
  "prerelease": "echo prerelease",
  "postprerelease": "echo postprerelease",
  "prepareOnly": "echo prepareOnly",
  "postprepareOnly": "echo postprepareOnly",
  "prepublish": "echo prepublish",
  "postprepublish": "echo postprepublish",
  "prepare": "echo prepare",
  "postprepare": "echo postprepare",
  "prepublishOnly": "echo prepublishOnly",
  "postprepublishOnly": "echo postprepublishOnly",
  "prepack": "echo prepack",
  "postprepack": "echo postprepack",
  "pack": "echo pack",
  "postpack": "echo postpack",
  "prepostpack": "echo prepostpack",
  "publish": "echo publish",
  "postpublish": "echo postpublish",
  "prepostpublish": "echo prepostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "postpublishOnly": "echo postpublishOnly",
  "preshrinkwrap": "echo preshrinkwrap",
  "shrinkwrap": "echo shrinkwrap",
  "postshrinkwrap": "echo postshrinkwrap",
  "predependencies": "echo predependencies",
  "dependencies": "echo dependencies",
  "postdependencies": "echo postdependencies"
}"
`;

exports[`should script lifecycle 1`] = `
{
  "_myscript": "echo _myscript",
  "_myscript_": "echo _myscript_",
  "analyze": "echo analyze",
  "build": "echo build",
  "ci": "echo ci",
  "coverage": "echo coverage",
  "dependencies": "echo dependencies",
  "dev": "echo dev",
  "install": "echo install",
  "installOnly": "echo installOnly",
  "lerna": "echo lerna",
  "link": "echo link",
  "lint": "echo lint",
  "major": "echo major",
  "minor": "echo minor",
  "myscript": "echo myscript",
  "myscript:abc": "echo myscript:abc",
  "myscript_": "echo myscript_",
  "npm": "echo npm",
  "pack": "echo pack",
  "pare": "echo pare",
  "pareOnly": "echo pareOnly",
  "patch": "echo patch",
  "post_myscript": "echo post_myscript",
  "post_myscript_": "echo post_myscript_",
  "postanalyze": "echo postanalyze",
  "postbuild": "echo postbuild",
  "postci": "echo postci",
  "postcoverage": "echo postcoverage",
  "postdependencies": "echo postdependencies",
  "postdev": "echo postdev",
  "postinstall": "echo postinstall",
  "postinstallOnly": "echo postinstallOnly",
  "postlerna": "echo postlerna",
  "postlink": "echo postlink",
  "postlint": "echo postlint",
  "postmajor": "echo postmajor",
  "postminor": "echo postminor",
  "postmyscript": "echo postmyscript",
  "postmyscript:abc": "echo postmyscript:abc",
  "postmyscript_": "echo postmyscript_",
  "postnpm": "echo postnpm",
  "postpack": "echo postpack",
  "postpare": "echo postpare",
  "postpareOnly": "echo postpareOnly",
  "postpatch": "echo postpatch",
  "postpostinstallOnly": "echo postpostinstallOnly",
  "postpostpack": "echo postpostpack",
  "postpostpublish": "echo postpostpublish",
  "postpostpublishOnly": "echo postpostpublishOnly",
  "postpostuninstallOnly": "echo postpostuninstallOnly",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "postprepack": "echo postprepack",
  "postprepare": "echo postprepare",
  "postprepareOnly": "echo postprepareOnly",
  "postprepublish": "echo postprepublish",
  "postprepublishOnly": "echo postprepublishOnly",
  "postprerelease": "echo postprerelease",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "postrelease": "echo postrelease",
  "postrestart": "echo postrestart",
  "postreview": "echo postreview",
  "postserve": "echo postserve",
  "postshrinkwrap": "echo postshrinkwrap",
  "poststart": "echo poststart",
  "poststop": "echo poststop",
  "poststorybook": "echo poststorybook",
  "posttest": "echo posttest",
  "postuninstall": "echo postuninstall",
  "postuninstallOnly": "echo postuninstallOnly",
  "postversion": "echo postversion",
  "postws": "echo postws",
  "postyarn": "echo postyarn",
  "pre_myscript": "echo pre_myscript",
  "pre_myscript_": "echo pre_myscript_",
  "preanalyze": "echo preanalyze",
  "prebuild": "echo prebuild",
  "preci": "echo preci",
  "precoverage": "echo precoverage",
  "predependencies": "echo predependencies",
  "predev": "echo predev",
  "preinstall": "echo preinstall",
  "preinstallOnly": "echo preinstallOnly",
  "prelerna": "echo prelerna",
  "prelink": "echo prelink",
  "prelint": "echo prelint",
  "premajor": "echo premajor",
  "preminor": "echo preminor",
  "premyscript": "echo premyscript",
  "premyscript:abc": "echo premyscript:abc",
  "premyscript_": "echo premyscript_",
  "prenpm": "echo prenpm",
  "prepack": "echo prepack",
  "prepare": "echo prepare",
  "prepareOnly": "echo prepareOnly",
  "prepatch": "echo prepatch",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "prepostpack": "echo prepostpack",
  "prepostpublish": "echo prepostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "prepreinstallOnly": "echo prepreinstallOnly",
  "preprepack": "echo preprepack",
  "preprepare": "echo preprepare",
  "preprepareOnly": "echo preprepareOnly",
  "preprepublish": "echo preprepublish",
  "preprepublishOnly": "echo preprepublishOnly",
  "preprerelease": "echo preprerelease",
  "prepreuninstallOnly": "echo prepreuninstallOnly",
  "prepublish": "echo prepublish",
  "prepublishOnly": "echo prepublishOnly",
  "prerelease": "echo prerelease",
  "prerestart": "echo prerestart",
  "prereview": "echo prereview",
  "preserve": "echo preserve",
  "preshrinkwrap": "echo preshrinkwrap",
  "prestart": "echo prestart",
  "prestop": "echo prestop",
  "prestorybook": "echo prestorybook",
  "pretest": "echo pretest",
  "preuninstall": "echo preuninstall",
  "preuninstallOnly": "echo preuninstallOnly",
  "preversion": "echo preversion",
  "prews": "echo prews",
  "preyarn": "echo preyarn",
  "publish": "echo publish",
  "publishOnly": "echo publishOnly",
  "release": "echo release",
  "restart": "echo restart",
  "review": "echo review",
  "serve": "echo serve",
  "shrinkwrap": "echo shrinkwrap",
  "start": "echo start",
  "stop": "echo stop",
  "storybook": "echo storybook",
  "test": "echo test",
  "uninstall": "echo uninstall",
  "uninstallOnly": "echo uninstallOnly",
  "version": "echo version",
  "ws": "echo ws",
  "yarn": "echo yarn",
}
`;

exports[`should script lifecycle 2`] = `
[
  "preserve",
  "serve",
  "postserve",
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "prereview",
  "review",
  "postreview",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "prepreinstallOnly",
  "preinstallOnly",
  "postpreinstallOnly",
  "preinstall",
  "install",
  "postinstall",
  "prepostinstallOnly",
  "postinstallOnly",
  "postpostinstallOnly",
  "prepreuninstallOnly",
  "preuninstallOnly",
  "postpreuninstallOnly",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prepostuninstallOnly",
  "postuninstallOnly",
  "postpostuninstallOnly",
  "prebuild",
  "build",
  "postbuild",
  "prestorybook",
  "storybook",
  "poststorybook",
  "preanalyze",
  "analyze",
  "postanalyze",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "prews",
  "ws",
  "postws",
  "preversion",
  "version",
  "postversion",
  "premajor",
  "major",
  "postmajor",
  "preminor",
  "minor",
  "postminor",
  "prepatch",
  "patch",
  "postpatch",
  "preprerelease",
  "prerelease",
  "postprerelease",
  "preprepareOnly",
  "prepareOnly",
  "postprepareOnly",
  "preprepublish",
  "prepublish",
  "postprepublish",
  "preprepare",
  "prepare",
  "postprepare",
  "preprepublishOnly",
  "prepublishOnly",
  "postprepublishOnly",
  "preprepack",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "postpostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "postpostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "postpostpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "predependencies",
  "dependencies",
  "postdependencies",
  "premyscript",
  "premyscript_",
  "premyscript:abc",
  "myscript",
  "myscript_",
  "_myscript",
  "_myscript_",
  "myscript:abc",
  "postmyscript",
  "postmyscript_",
  "postmyscript:abc",
  "installOnly",
  "pare",
  "postpare",
  "pareOnly",
  "postpareOnly",
  "pre_myscript",
  "pre_myscript_",
  "post_myscript",
  "post_myscript_",
  "release",
  "postrelease",
  "publishOnly",
  "uninstallOnly",
]
`;

exports[`should script lifecycle 3`] = `
"{
  "preserve": "echo preserve",
  "serve": "echo serve",
  "postserve": "echo postserve",
  "prestart": "echo prestart",
  "start": "echo start",
  "poststart": "echo poststart",
  "predev": "echo predev",
  "dev": "echo dev",
  "postdev": "echo postdev",
  "prerestart": "echo prerestart",
  "restart": "echo restart",
  "postrestart": "echo postrestart",
  "prestop": "echo prestop",
  "stop": "echo stop",
  "poststop": "echo poststop",
  "prereview": "echo prereview",
  "review": "echo review",
  "postreview": "echo postreview",
  "precoverage": "echo precoverage",
  "coverage": "echo coverage",
  "postcoverage": "echo postcoverage",
  "prelint": "echo prelint",
  "lint": "echo lint",
  "postlint": "echo postlint",
  "pretest": "echo pretest",
  "test": "echo test",
  "posttest": "echo posttest",
  "prepreinstallOnly": "echo prepreinstallOnly",
  "preinstallOnly": "echo preinstallOnly",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "preinstall": "echo preinstall",
  "install": "echo install",
  "postinstall": "echo postinstall",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "postinstallOnly": "echo postinstallOnly",
  "postpostinstallOnly": "echo postpostinstallOnly",
  "prepreuninstallOnly": "echo prepreuninstallOnly",
  "preuninstallOnly": "echo preuninstallOnly",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "preuninstall": "echo preuninstall",
  "uninstall": "echo uninstall",
  "postuninstall": "echo postuninstall",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "postuninstallOnly": "echo postuninstallOnly",
  "postpostuninstallOnly": "echo postpostuninstallOnly",
  "prebuild": "echo prebuild",
  "build": "echo build",
  "postbuild": "echo postbuild",
  "prestorybook": "echo prestorybook",
  "storybook": "echo storybook",
  "poststorybook": "echo poststorybook",
  "preanalyze": "echo preanalyze",
  "analyze": "echo analyze",
  "postanalyze": "echo postanalyze",
  "prelink": "echo prelink",
  "link": "echo link",
  "postlink": "echo postlink",
  "preci": "echo preci",
  "ci": "echo ci",
  "postci": "echo postci",
  "prenpm": "echo prenpm",
  "npm": "echo npm",
  "postnpm": "echo postnpm",
  "preyarn": "echo preyarn",
  "yarn": "echo yarn",
  "postyarn": "echo postyarn",
  "prelerna": "echo prelerna",
  "lerna": "echo lerna",
  "postlerna": "echo postlerna",
  "prews": "echo prews",
  "ws": "echo ws",
  "postws": "echo postws",
  "preversion": "echo preversion",
  "version": "echo version",
  "postversion": "echo postversion",
  "premajor": "echo premajor",
  "major": "echo major",
  "postmajor": "echo postmajor",
  "preminor": "echo preminor",
  "minor": "echo minor",
  "postminor": "echo postminor",
  "prepatch": "echo prepatch",
  "patch": "echo patch",
  "postpatch": "echo postpatch",
  "preprerelease": "echo preprerelease",
  "prerelease": "echo prerelease",
  "postprerelease": "echo postprerelease",
  "preprepareOnly": "echo preprepareOnly",
  "prepareOnly": "echo prepareOnly",
  "postprepareOnly": "echo postprepareOnly",
  "preprepublish": "echo preprepublish",
  "prepublish": "echo prepublish",
  "postprepublish": "echo postprepublish",
  "preprepare": "echo preprepare",
  "prepare": "echo prepare",
  "postprepare": "echo postprepare",
  "preprepublishOnly": "echo preprepublishOnly",
  "prepublishOnly": "echo prepublishOnly",
  "postprepublishOnly": "echo postprepublishOnly",
  "preprepack": "echo preprepack",
  "prepack": "echo prepack",
  "postprepack": "echo postprepack",
  "pack": "echo pack",
  "postpack": "echo postpack",
  "prepostpack": "echo prepostpack",
  "postpostpack": "echo postpostpack",
  "publish": "echo publish",
  "postpublish": "echo postpublish",
  "prepostpublish": "echo prepostpublish",
  "postpostpublish": "echo postpostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "postpublishOnly": "echo postpublishOnly",
  "postpostpublishOnly": "echo postpostpublishOnly",
  "preshrinkwrap": "echo preshrinkwrap",
  "shrinkwrap": "echo shrinkwrap",
  "postshrinkwrap": "echo postshrinkwrap",
  "predependencies": "echo predependencies",
  "dependencies": "echo dependencies",
  "postdependencies": "echo postdependencies",
  "premyscript": "echo premyscript",
  "premyscript_": "echo premyscript_",
  "premyscript:abc": "echo premyscript:abc",
  "myscript": "echo myscript",
  "myscript_": "echo myscript_",
  "_myscript": "echo _myscript",
  "_myscript_": "echo _myscript_",
  "myscript:abc": "echo myscript:abc",
  "postmyscript": "echo postmyscript",
  "postmyscript_": "echo postmyscript_",
  "postmyscript:abc": "echo postmyscript:abc",
  "installOnly": "echo installOnly",
  "pare": "echo pare",
  "postpare": "echo postpare",
  "pareOnly": "echo pareOnly",
  "postpareOnly": "echo postpareOnly",
  "pre_myscript": "echo pre_myscript",
  "pre_myscript_": "echo pre_myscript_",
  "post_myscript": "echo post_myscript",
  "post_myscript_": "echo post_myscript_",
  "release": "echo release",
  "postrelease": "echo postrelease",
  "publishOnly": "echo publishOnly",
  "uninstallOnly": "echo uninstallOnly"
}"
`;

exports[`sort base 1`] = `
{
  "multiply": "2 * 3",
  "postinstall": "echo "Installed"",
  "postprettier": "echo "so pretty"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier": "echo "not pretty"",
  "pretest": "xyz",
  "prettier": "prettier -l "**/*.js"",
  "prewatch": "echo "about to watch"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base 2`] = `
[
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "multiply",
  "preprettier",
  "prettier",
  "postprettier",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base 3`] = `
"{
  "start": "node server.js",
  "pretest": "xyz",
  "test": "node test.js",
  "posttest": "abc",
  "postinstall": "echo \\"Installed\\"",
  "prepare": "npm run build",
  "multiply": "2 * 3",
  "preprettier": "echo \\"not pretty\\"",
  "prettier": "prettier -l \\"**/*.js\\"",
  "postprettier": "echo \\"so pretty\\"",
  "pre-fetch-info": "foo",
  "prewatch": "echo \\"about to watch\\"",
  "watch": "watch things"
}"
`;

exports[`sort base v2 1`] = `
{
  "_postprettier": "echo "so pretty"",
  "multiply": "2 * 3",
  "postinstall": "echo "Installed"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier_": "echo "not pretty"",
  "pretest": "xyz",
  "prettier_": "prettier -l "**/*.js"",
  "prewatch": "echo "about to watch"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base v2 2`] = `
[
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "preprettier_",
  "prettier_",
  "_postprettier",
  "multiply",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base v2 3`] = `
"{
  "start": "node server.js",
  "pretest": "xyz",
  "test": "node test.js",
  "posttest": "abc",
  "postinstall": "echo \\"Installed\\"",
  "prepare": "npm run build",
  "preprettier_": "echo \\"not pretty\\"",
  "prettier_": "prettier -l \\"**/*.js\\"",
  "_postprettier": "echo \\"so pretty\\"",
  "multiply": "2 * 3",
  "pre-fetch-info": "foo",
  "prewatch": "echo \\"about to watch\\"",
  "watch": "watch things"
}"
`;

exports[`sort yarn-tool scripts 1`] = `
{
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "postpublish_": "git commit -m "chore(release): publish" .",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "sort-package-json": "npx yarn-tool sort",
  "test": "echo "Error: no test specified" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register "!(node_modules)/**/*.{test,spec}.{ts,tsx}"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 2`] = `
[
  "coverage",
  "lint",
  "test",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "prepublishOnly_",
  "postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 3`] = `
"{
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "test": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "ncu": "npx yarn-tool ncu -u",
  "sort-package-json": "npx yarn-tool sort",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json"
}"
`;

exports[`sort yarn-tool scripts 4`] = `
{
  "_postpublish_": "git commit -m "chore(release): publish" .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "sort-package-json": "npx yarn-tool sort",
  "test-": "echo "Error: no test specified" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register "!(node_modules)/**/*.{test,spec}.{ts,tsx}"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 5`] = `
[
  "coverage",
  "lint",
  "test-",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "_prepublishOnly:",
  "_postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 6`] = `
"{
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "test-": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "_postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "ncu": "npx yarn-tool ncu -u",
  "sort-package-json": "npx yarn-tool sort",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json"
}"
`;
